@@ -4,35 +4,90 @@ import java.io.File;
 import java.net.URL;
 import java.net.URLStreamHandler;
 import java.net.URLStreamHandlerFactory;
-import java.util.Map;
 
 import com.google.common.base.Throwables;
-import com.google.common.collect.Maps;
-
-import com.enonic.wem.api.module.ModuleKey;
 
 final class MockUrlStreamHandlerFactory
     implements URLStreamHandlerFactory, ResourceUrlRegistry
 {
-    private final Map<ModuleKey, URL> urlMapping;
+    private File modulesDir;
 
-    public MockUrlStreamHandlerFactory()
-    {
-        this.urlMapping = Maps.newHashMap();
-    }
+    private ClassLoader modulesClassLoader;
 
     @Override
     public URL getUrl( final ResourceKey resourceKey )
     {
-        final URL baseUrl = this.urlMapping.get( resourceKey.getModule() );
-        if ( baseUrl == null )
+        URL url = resolveUrl( resourceKey.getModule().toString() + resourceKey.getPath() );
+        if ( url != null )
+        {
+            return url;
+        }
+
+        url = resolveUrl( "modules/" + resourceKey.getModule().toString() + resourceKey.getPath() );
+        if ( url != null )
+        {
+            return url;
+        }
+
+        return resolveUrl( resourceKey.getPath() );
+    }
+
+    private URL resolveUrl( final String path )
+    {
+        if ( this.modulesClassLoader != null )
+        {
+            final URL url = resolveUrl( this.modulesClassLoader, path );
+            if ( url != null )
+            {
+                return url;
+            }
+        }
+
+        if ( this.modulesDir != null )
+        {
+            final URL url = resolveUrl( this.modulesDir, path );
+            if ( url != null )
+            {
+                return url;
+            }
+        }
+
+        return null;
+    }
+
+    private static URL resolveUrl( final ClassLoader loader, final String path )
+    {
+        if ( loader == null )
+        {
+            return null;
+        }
+
+        if ( path.startsWith( "/" ) )
+        {
+            return loader.getResource( path.substring( 1 ) );
+        }
+        else
+        {
+            return loader.getResource( path );
+        }
+    }
+
+    private static URL resolveUrl( final File dir, final String path )
+    {
+        if ( dir == null )
+        {
+            return null;
+        }
+
+        final File file = new File( dir, path );
+        if ( !file.exists() )
         {
             return null;
         }
 
         try
         {
-            return new URL( combineUrl( baseUrl.toString(), resourceKey.getPath() ) );
+            return file.toURI().toURL();
         }
         catch ( final Exception e )
         {
@@ -40,35 +95,18 @@ final class MockUrlStreamHandlerFactory
         }
     }
 
-    private String combineUrl( final String baseUrl, final String path )
+    @Override
+    public ResourceUrlRegistry modulesDir( final File modulesDir )
     {
-        if ( baseUrl.endsWith( "/" ) )
-        {
-            return baseUrl + path.substring( 1 );
-        }
-        else
-        {
-            return baseUrl + path;
-        }
+        this.modulesDir = modulesDir;
+        return this;
     }
 
     @Override
-    public void register( final ModuleKey moduleKey, final URL baseUrl )
+    public ResourceUrlRegistry modulesClassLoader( final ClassLoader modulesClassLoader )
     {
-        this.urlMapping.put( moduleKey, baseUrl );
-    }
-
-    @Override
-    public void register( final ModuleKey moduleKey, final File baseDir )
-    {
-        try
-        {
-            register( moduleKey, baseDir.toURI().toURL() );
-        }
-        catch ( final Exception e )
-        {
-            throw Throwables.propagate( e );
-        }
+        this.modulesClassLoader = modulesClassLoader;
+        return this;
     }
 
     @Override
